--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <!-- the entire body must be written by student -->
+    <div id="outer">
+        <div id="middle">
+            <div id="inner"></div>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
